	start a non-supported Ogg codec.
2016-12-01 Fred Gleason <fredg@paravelsystems.com>
	* Modified the Ogg codec to use dynamic library loading.
2016-12-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed typos in 'configure.ac'.
2016-12-02 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a memory leak in 'src/glassplayergui/playmeter.cpp'.
2016-12-02 Fred Gleason <fredg@paravelsystems.com>
	* Altered dynamic library targets to include major version numbers.
2016-12-07 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'src/glassplayer/dev_alsa.cpp' that broke the
	build when compiling without ALSA support.
2016-12-07 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'src/glassplayer/dev_jack.cpp' that broke the
	build when compiling without JACK support.
2016-12-07 Fred Gleason <fredg@paravelsystems.com>
	* Refactored 'configure.ac' to use PKG_CHECK_MODULE() wherever
	possible.
2016-12-07 Fred Gleason <fredg@paravelsystems.com>
	* Modified build system to work under MinGW32.
2016-12-07 Fred Gleason <fredg@paravelsystems.com>
	* Added basic PortAudio support in 'src/glassplayer/dev_portaudio.cpp'
	and 'src/glassplayer/dev_portaudio.h'.
2016-12-09 Fred Gleason <fredg@paravelsystems.com>
	* Converted the codecs to use Libtool libltdl for dynamic loading.
2016-12-09 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'src/glassplayer/dev_portaudio.cpp' that broke the
	build when PortAudio was not enabled.
	* Added Ogg codec load paths for Windows in
	'src/glassplayer/codec_ogg.cpp'.
	* Added a 'make win32-install-ogg' target in 'Makefile.am'.
2016-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a Windows Multimedia audio device in
	'src/glassplayer/dst_mme.cpp' and 'src/glassplayer/dst_mme.h'.
2016-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Removed PortAudio support.
2016-12-16 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'src/glassplayer/dev_mme.cpp' that broke the build
	under Linux.