@@ -24,7 +24,7 @@
 #define DEFAULT_SERVER_PORT 80
 #define DEFAULT_AUDIO_BITRATE 128
 #define DEFAULT_AUDIO_SAMPLERATE 44100
-#define DEFAULT_AUDIO_DEVICE AudioDevice::Jack
+#define DEFAULT_AUDIO_DEVICE @DEFAULT_AUDIO_DEVICE@
 #define MAX_AUDIO_CHANNELS 2
 #define RINGBUFFER_SIZE 262144
 
