@@ -335,3 +335,6 @@
 2016-12-16 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed bugs in 'src/glassplayer/dev_mme.cpp' that broke the build
 	under Linux.
+2016-12-16 Fred Gleason <fredg@paravelsystems.com>
+	* Modified glassplayer(1) to use 'MME' as the default audio device
+	under Windows.
